--- a/EventGuru02/Base.lproj/Main.storyboard
+++ b/EventGuru02/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="gWp-65-mpg" kind="relationship" relationship="rootViewController" id="MBX-Lb-Ols"/>
+                        <segue destination="gWp-65-mpg" kind="relationship" relationship="rootViewController" id="b9s-Jo-ive"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aBM-JB-Kk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
