--- a/EventGuru02/Fahad/Fahad-Event Posting.storyboard
+++ b/EventGuru02/Fahad/Fahad-Event Posting.storyboard
@@ -104,9 +104,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QrB-3N-NcS">
-                                <rect key="frame" x="15" y="57" width="363" height="183"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0r9-nE-R2t">
                                 <rect key="frame" x="135" y="773.33333333333337" width="122" height="38.333333333333371"/>
                                 <state key="normal" title="Button"/>
@@ -115,6 +112,10 @@
                                     <action selector="createEventBtn:" destination="TaN-va-PD1" eventType="touchUpInside" id="gI3-br-EPS"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GRU-vd-tHy">
+                                <rect key="frame" x="17" y="61" width="360" height="178"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="e87-W9-ebQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -123,10 +124,8 @@
                             <constraint firstItem="0Ku-zl-wd7" firstAttribute="leading" secondItem="MQS-CD-x0S" secondAttribute="trailing" constant="75" id="4Yg-Nf-MET"/>
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="top" secondItem="rjD-1L-GVY" secondAttribute="bottom" constant="21" id="6Gr-tq-TTa"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="i6R-1G-RRp" secondAttribute="trailing" constant="16" id="6vc-ky-WXN"/>
-                            <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="QrB-3N-NcS" secondAttribute="trailing" constant="15" id="COO-6C-m31"/>
                             <constraint firstItem="1by-WY-cZp" firstAttribute="top" secondItem="L7F-KW-pvn" secondAttribute="bottom" constant="116" id="DtX-r1-K7I"/>
                             <constraint firstItem="L7F-KW-pvn" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="16" id="FV6-ih-9pi"/>
-                            <constraint firstItem="i6R-1G-RRp" firstAttribute="top" secondItem="QrB-3N-NcS" secondAttribute="bottom" constant="29" id="G6A-aO-b2t"/>
                             <constraint firstItem="H4Q-rn-d73" firstAttribute="top" secondItem="vGb-64-eO7" secondAttribute="bottom" constant="8" id="GEK-aW-OYH"/>
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="leading" secondItem="Y3r-ba-Vw5" secondAttribute="trailing" constant="82" id="HAj-vl-EZI"/>
                             <constraint firstItem="vGb-64-eO7" firstAttribute="top" secondItem="5Ll-bs-BHC" secondAttribute="bottom" constant="15" id="Heb-Nl-dwF"/>
@@ -157,11 +156,9 @@
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="top" secondItem="0Ku-zl-wd7" secondAttribute="bottom" constant="15" id="k3P-XQ-8zF"/>
                             <constraint firstItem="MQS-CD-x0S" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="17" id="kzq-9B-dIW"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="0r9-nE-R2t" secondAttribute="trailing" constant="136" id="mdQ-Ip-2og"/>
-                            <constraint firstItem="QrB-3N-NcS" firstAttribute="top" secondItem="BD8-tx-ubh" secondAttribute="top" constant="57" id="oal-V1-Oha"/>
                             <constraint firstItem="MQS-CD-x0S" firstAttribute="top" secondItem="g65-WG-0eI" secondAttribute="bottom" constant="41" id="r3W-7b-MLh"/>
                             <constraint firstItem="vGb-64-eO7" firstAttribute="top" secondItem="5Ll-bs-BHC" secondAttribute="bottom" constant="15" id="tgJ-eu-BJd"/>
                             <constraint firstItem="Lsg-qe-p0a" firstAttribute="top" secondItem="0Ku-zl-wd7" secondAttribute="bottom" constant="15" id="u4r-ek-TJb"/>
-                            <constraint firstItem="QrB-3N-NcS" firstAttribute="leading" secondItem="e87-W9-ebQ" secondAttribute="leading" constant="15" id="u7I-Rp-ve3"/>
                             <constraint firstItem="r7p-WQ-sX3" firstAttribute="leading" secondItem="7Wl-DB-RfV" secondAttribute="trailing" constant="66" id="uxb-wm-ceH"/>
                             <constraint firstItem="5Ll-bs-BHC" firstAttribute="top" secondItem="i6R-1G-RRp" secondAttribute="bottom" constant="12" id="vCc-0w-1C8"/>
                             <constraint firstItem="e87-W9-ebQ" firstAttribute="trailing" secondItem="vGb-64-eO7" secondAttribute="trailing" constant="16" id="vtr-KT-hpV"/>
@@ -176,7 +173,7 @@
                         <outlet property="Description" destination="vGb-64-eO7" id="bjt-rT-3c9"/>
                         <outlet property="endDatePicker" destination="Lsg-qe-p0a" id="oHF-oR-lds"/>
                         <outlet property="eventName" destination="5Ll-bs-BHC" id="kod-GV-8vA"/>
-                        <outlet property="imageView" destination="QrB-3N-NcS" id="Vgp-Ef-neW"/>
+                        <outlet property="imageView" destination="GRU-vd-tHy" id="gon-Qf-lRf"/>
                         <outlet property="location" destination="r7p-WQ-sX3" id="OzZ-jI-pFk"/>
                         <outlet property="price" destination="H4Q-rn-d73" id="Jpu-Bj-nbL"/>
                         <outlet property="startDatePicker" destination="0Ku-zl-wd7" id="8z4-sC-R0Q"/>
