--- a/EventGuru02/Marwa/dashboard.storyboard
+++ b/EventGuru02/Marwa/dashboard.storyboard
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dashboard List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sw-M2-1s4">
-                                <rect key="frame" x="117" y="165" width="163" height="30"/>
+                                <rect key="frame" x="35" y="160" width="163" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -54,9 +54,13 @@
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sce-j1-7pO">
                                                             <rect key="frame" x="15" y="14" width="145" height="90"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="145" id="UEC-FK-xYD"/>
+                                                                <constraint firstAttribute="height" constant="90" id="fB3-CW-Es5"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="eventName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beL-UT-Dpd">
-                                                            <rect key="frame" x="197" y="14" width="159" height="21"/>
+                                                            <rect key="frame" x="196" y="29" width="96.666666666666686" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="21" id="vLa-fA-bHN"/>
                                                             </constraints>
@@ -65,41 +69,23 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skE-Bd-JR0">
-                                                            <rect key="frame" x="197" y="43" width="42.333333333333343" height="23"/>
+                                                            <rect key="frame" x="196" y="71" width="42.333333333333343" height="23"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jew-5v-S5a">
-                                                            <rect key="frame" x="197" y="76" width="134" height="28"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="28" id="DEr-68-OpZ"/>
-                                                                <constraint firstAttribute="width" constant="134" id="H5Y-ha-jiO"/>
-                                                            </constraints>
-                                                            <state key="normal" title="Button"/>
-                                                            <buttonConfiguration key="configuration" style="filled" title="Reuse"/>
-                                                            <connections>
-                                                                <action selector="handleReuseButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="aqb-25-xRq"/>
-                                                                <action selector="reuseButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="poy-dS-w4I"/>
-                                                                <segue destination="IcH-7P-WoI" kind="show" identifier="EventEditingViewController" id="wEq-nn-3aI"/>
-                                                            </connections>
-                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                     <constraints>
-                                                        <constraint firstItem="Jew-5v-S5a" firstAttribute="top" secondItem="uaZ-tR-p5B" secondAttribute="top" constant="76" id="09D-T0-U4y"/>
-                                                        <constraint firstItem="beL-UT-Dpd" firstAttribute="leading" secondItem="Jew-5v-S5a" secondAttribute="leading" id="3vf-0m-KaP"/>
-                                                        <constraint firstItem="sce-j1-7pO" firstAttribute="centerY" secondItem="uaZ-tR-p5B" secondAttribute="centerY" id="5G0-OM-df8"/>
                                                         <constraint firstAttribute="width" constant="373" id="C7P-Sf-Zjz"/>
-                                                        <constraint firstItem="skE-Bd-JR0" firstAttribute="top" secondItem="beL-UT-Dpd" secondAttribute="bottom" constant="8" id="CGX-Jy-Kee"/>
-                                                        <constraint firstItem="Jew-5v-S5a" firstAttribute="leading" secondItem="sce-j1-7pO" secondAttribute="trailing" constant="37" id="DBf-li-Bfc"/>
+                                                        <constraint firstItem="skE-Bd-JR0" firstAttribute="top" secondItem="beL-UT-Dpd" secondAttribute="bottom" constant="21" id="CGX-Jy-Kee"/>
                                                         <constraint firstAttribute="height" constant="118" id="FOh-ui-wW0"/>
-                                                        <constraint firstAttribute="trailing" secondItem="beL-UT-Dpd" secondAttribute="trailing" constant="17" id="GjT-Lt-wPp"/>
+                                                        <constraint firstAttribute="trailing" secondItem="beL-UT-Dpd" secondAttribute="trailing" constant="80.333333333333314" id="GjT-Lt-wPp"/>
                                                         <constraint firstItem="sce-j1-7pO" firstAttribute="top" secondItem="uaZ-tR-p5B" secondAttribute="top" constant="14" id="RgI-eG-xVh"/>
-                                                        <constraint firstItem="beL-UT-Dpd" firstAttribute="top" secondItem="sce-j1-7pO" secondAttribute="top" id="dA3-ZT-6jk"/>
+                                                        <constraint firstItem="beL-UT-Dpd" firstAttribute="top" secondItem="sce-j1-7pO" secondAttribute="top" constant="15" id="dA3-ZT-6jk"/>
+                                                        <constraint firstItem="beL-UT-Dpd" firstAttribute="leading" secondItem="sce-j1-7pO" secondAttribute="trailing" constant="36" id="q4e-g7-5pk"/>
                                                         <constraint firstItem="sce-j1-7pO" firstAttribute="leading" secondItem="uaZ-tR-p5B" secondAttribute="leading" constant="15" id="r4e-qe-MPR"/>
                                                         <constraint firstItem="beL-UT-Dpd" firstAttribute="leading" secondItem="skE-Bd-JR0" secondAttribute="leading" id="xOG-5G-bHB"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Jew-5v-S5a" secondAttribute="trailing" constant="42" id="yGY-Cg-pad"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -117,7 +103,6 @@
                                             <outlet property="eventImage" destination="sce-j1-7pO" id="WJo-uL-KUP"/>
                                             <outlet property="eventName" destination="beL-UT-Dpd" id="eIy-ID-moz"/>
                                             <outlet property="price" destination="skE-Bd-JR0" id="vpp-Dl-Btc"/>
-                                            <outlet property="reuse" destination="Jew-5v-S5a" id="h17-a0-089"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -126,16 +111,29 @@
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="AKF-5l-bRw"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LuV-yw-W3O">
+                                <rect key="frame" x="272" y="156" width="75" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="aPA-Jh-3Gp"/>
+                                    <constraint firstAttribute="height" constant="39" id="bcf-UO-ZSS"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Reuse"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="nbs-oM-gKZ" secondAttribute="trailing" constant="237" id="6wz-fs-3Jt"/>
-                            <constraint firstItem="2sw-M2-1s4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="117" id="7jx-ii-aWl"/>
-                            <constraint firstItem="2sw-M2-1s4" firstAttribute="top" secondItem="nbs-oM-gKZ" secondAttribute="bottom" constant="28.666666666666657" id="GNj-1M-lEO"/>
+                            <constraint firstItem="2sw-M2-1s4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="35" id="7jx-ii-aWl"/>
+                            <constraint firstItem="LuV-yw-W3O" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="53" id="ELJ-wN-8iF"/>
+                            <constraint firstItem="2sw-M2-1s4" firstAttribute="top" secondItem="nbs-oM-gKZ" secondAttribute="bottom" constant="23.666666666666657" id="GNj-1M-lEO"/>
+                            <constraint firstItem="R1l-kC-dea" firstAttribute="top" secondItem="LuV-yw-W3O" secondAttribute="bottom" constant="23" id="I2o-eL-2b0"/>
+                            <constraint firstItem="LuV-yw-W3O" firstAttribute="leading" secondItem="2sw-M2-1s4" secondAttribute="trailing" constant="74" id="IdK-1G-3iB"/>
                             <constraint firstItem="R1l-kC-dea" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="SFd-e6-eiN"/>
                             <constraint firstItem="bs4-mT-BDJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="SSm-DQ-11d"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2sw-M2-1s4" secondAttribute="trailing" constant="113" id="Vn5-iv-AZc"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LuV-yw-W3O" secondAttribute="trailing" constant="46" id="ShW-Ho-ZSr"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2sw-M2-1s4" secondAttribute="trailing" constant="195" id="Vn5-iv-AZc"/>
                             <constraint firstItem="R1l-kC-dea" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="X1x-xn-M8Y"/>
                             <constraint firstItem="R1l-kC-dea" firstAttribute="top" secondItem="bs4-mT-BDJ" secondAttribute="bottom" constant="66" id="cw2-aX-NJB"/>
                             <constraint firstItem="nbs-oM-gKZ" firstAttribute="leading" secondItem="bs4-mT-BDJ" secondAttribute="trailing" id="gX5-7Q-emd"/>
@@ -147,6 +145,7 @@
                     <navigationItem key="navigationItem" id="e71-pK-WxV"/>
                     <connections>
                         <outlet property="tableView" destination="R1l-kC-dea" id="oW5-zV-Mk1"/>
+                        <segue destination="IcH-7P-WoI" kind="show" identifier="showEventListing" id="keO-oS-Qp1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
