--- a/EventGuru02/Fahad/Fahad-HomePage.storyboard
+++ b/EventGuru02/Fahad/Fahad-HomePage.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hEG-E9-idR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DZO-aS-U00">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -16,20 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqC-CK-2N1">
-                                <rect key="frame" x="55" y="179" width="114" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Most Recommended" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0w-tI-7Pk">
-                                <rect key="frame" x="16" y="179" width="191" height="26"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CGx-9c-dyl">
-                                <rect key="frame" x="0.0" y="220" width="393" height="482"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CGx-9c-dyl">
+                                <rect key="frame" x="0.0" y="220" width="393" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="145" id="eWs-iT-5cb" customClass="HomeTableViewCell" customModule="EventGuru02" customModuleProvider="target">
@@ -39,10 +28,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O6J-p1-P87">
-                                                    <rect key="frame" x="20" y="15" width="190" height="130"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UpU-YA-n9K">
                                                     <rect key="frame" x="214" y="35" width="159" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -60,7 +45,6 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="EventImage" destination="O6J-p1-P87" id="1eM-fb-ath"/>
                                             <outlet property="EventName" destination="UpU-YA-n9K" id="kAl-1C-8C6"/>
                                             <outlet property="EventPrice" destination="tl3-0k-Laq" id="WZI-dK-6p4"/>
                                         </connections>
@@ -78,51 +62,58 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="V0d-a1-AgT">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="V0d-a1-AgT">
                                 <rect key="frame" x="3" y="78" width="69" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kj9-lK-1fo">
+                                <rect key="frame" x="29" y="162" width="157" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Filter By Interests"/>
+                                <connections>
+                                    <action selector="filterButton:" destination="RhS-tR-DXT" eventType="touchUpInside" id="oiz-DY-ZfB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NWR-2O-WC8">
+                                <rect key="frame" x="214" y="162" width="163" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="All Events"/>
+                                <connections>
+                                    <action selector="allEvents:" destination="RhS-tR-DXT" eventType="touchUpInside" id="XyB-AM-bOq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Kxy-L3-Cdq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="CGx-9c-dyl" firstAttribute="top" secondItem="P0w-tI-7Pk" secondAttribute="bottom" constant="15" id="04R-Oo-1xg"/>
-                            <constraint firstItem="CGx-9c-dyl" firstAttribute="leading" secondItem="Kxy-L3-Cdq" secondAttribute="leading" id="1bn-Df-iol"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="top" secondItem="a4G-QK-cjw" secondAttribute="top" constant="179" id="1y1-9M-s8h"/>
-                            <constraint firstItem="CGx-9c-dyl" firstAttribute="trailing" secondItem="Kxy-L3-Cdq" secondAttribute="trailing" id="DF3-Fw-sbt"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="centerX" secondItem="hqC-CK-2N1" secondAttribute="centerX" id="Sk4-HT-WRJ"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="leading" secondItem="a4G-QK-cjw" secondAttribute="leadingMargin" id="WnF-Zl-gsu"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="leading" secondItem="V0d-a1-AgT" secondAttribute="leading" constant="13" id="bcr-Uu-F4f"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="top" secondItem="hqC-CK-2N1" secondAttribute="top" id="eti-Iq-Tz6"/>
-                            <constraint firstItem="P0w-tI-7Pk" firstAttribute="top" secondItem="V0d-a1-AgT" secondAttribute="bottom" constant="51" id="mLf-YB-PCg"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4ol-xo-I4v"/>
                     <connections>
                         <outlet property="EventTable" destination="CGx-9c-dyl" id="24l-tT-PPK"/>
-                        <outlet property="tableView" destination="CGx-9c-dyl" id="QH1-yp-I25"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GFe-jZ-epb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2651.1450381679388" y="-279.57746478873241"/>
+            <point key="canvasLocation" x="3577.8625954198474" y="-279.57746478873241"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="w2T-yZ-aD3">
+        <scene sceneID="YDS-aZ-Xo6">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hEG-E9-idR" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DZO-aS-U00" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rqg-oJ-IKY">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oC2-2Z-JBN">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="RhS-tR-DXT" kind="relationship" relationship="rootViewController" id="xft-uM-I02"/>
+                        <segue destination="RhS-tR-DXT" kind="relationship" relationship="rootViewController" id="jqP-pu-NQe"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cIn-Ga-0wh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t3y-BM-mtN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1724.4274809160304" y="-279.57746478873241"/>
+            <point key="canvasLocation" x="2651.1450381679388" y="-279.57746478873241"/>
         </scene>
     </scenes>
     <resources>
